syntax = "proto2";
package protobuf;

message LargerP2Define {
	optional uint32 provider = 1;
	optional uint32 competition_id = 2;
	optional uint32 event_id = 3;
	optional uint32 market_id = 4;
}

message SmallerP2Define {
	optional uint32 competition_id = 2;
	optional uint32 market_id = 4;
}